Explain how `@TypedException()` has been changed.

--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -1,7 +1,7 @@
 import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 
 ## Outline
-```typescript filename="@nestia/core"
+```typescript filename="@nestia/core" showLineNumbers
 export function TypedBody(): ParameterDecorator;
 ```
 
