--- a/website/pages/docs/core/TypedFormData.mdx
+++ b/website/pages/docs/core/TypedFormData.mdx
@@ -1,7 +1,7 @@
 import { Tabs, Tab } from 'nextra-theme-docs'
 
 ## Outline
-```typescript filename="@nestia/core"
+```typescript filename="@nestia/core" showLineNumbers
 export namespace TypedFormData {
   export function Body(): ParameterDecorator;
 }
