--- a/website/pages/docs/core/TypedQuery.mdx
+++ b/website/pages/docs/core/TypedQuery.mdx
@@ -1,7 +1,7 @@
 ## Outline
 import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 
-```typescript filename="@nestia/core"
+```typescript filename="@nestia/core" showLineNumbers
 export function TypedQuery(): ParameterDecorator;
 export namespace TypedQuery {
   export function Body(): ParameterDecorator;
