--- a/website/pages/docs/core/WebSocketRoute.mdx
+++ b/website/pages/docs/core/WebSocketRoute.mdx
@@ -8,7 +8,7 @@ import { Callout, Tabs, Tab } from 'nextra-theme-docs'
       'Client Application',
   ]}>
   <Tab>
-```typescript
+```typescript filename="@nestia/core" showLineNumbers
 export function WebSocketRoute(path?: string): MethodDecorator;
 export namespace WebSocketRoute {
   export function Acceptor(): ParameterDecorator;
