--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -1,7 +1,7 @@
 import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 
 ## Outline
-```typescript filename="@nestia/core"
+```typescript filename="@nestia/core" showLineNumbers
 export namespace TypedRoute {
   export function Get(path?: string): MethodDecorator;
   export function Post(path?: string): MethodDecorator;
