--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -551,12 +551,11 @@ For reference, such encryption spec is not supported in the [Swagger-UI](../sdk/
       {
         "transform": "@nestia/core/lib/transform",
         "stringify": "assert",
-          // "stringify": typia.stringify without validation
-          // "assert": typia.assertStringify
-          // "is": typia.isStringify
-          // "validate": typia.validateStringify
-          // "validate.log": do not throw error, just log
-          // "validateEquals".log: do not throw error, just log
+          // "assert": typia.assertStringify<T>()
+          // "is": typia.isStringify<T>()
+          // "validate": typia.validateStringify<T>()
+          // "validate.log": typia.validateStringify<T>(), but do not throw error and just log it
+          // "stringify": typia.stringify<T>() without validation
       }
     ]
   }
@@ -573,13 +572,12 @@ Here is the list of available options.
   - `assert`: [`typia.json.assertStringify<T>()`](https://typia.io/docs/json/stringify/)
   - `is`: [`typia.json.isStringify<T>()`](https://typia.io/docs/json/stringify/)
   - `validate`: [`typia.json.validateStringify<T>()`](https://typia.io/docs/json/stringify/)
+  - `validate.log`: [`typia.json.validateStringify<T>()`](https://typia.io/docs/json/stringify/), but do not throw error and just log it
   - `null`: just use `JSON.stringify()` function without validation
-  - `validate.log`: do not throw error, but just log by [`typia.validate<T>()`](https://typia.io/docs/validators/validate/)
-  - `validateEquals.log`: do not throw error, but just log by [`typia.validateEquals<T>()`](https://typia.io/docs/validators/validate/#validateequals-function)
 
 By the way, this is not a recommended way, but you can skip the response type validation for. If you set the `stringify` property to `null`, the response type validation will be skipped and just `JSON.stringify()` function be used. 
 
-Also, `validate.log` and `validateEquals.log` perform the validation, but do not throw 500 internal server error. When type error be detected, it seralizes response data by `JSON.stringify()` function, and logs the error message to the console or somewhere you've specified. It is useful when you want to know the error message, but do not want to throw 500 internal server error to the client application.
+Also, `validate.log` performs the validation, but does not throw 500 internal server error. When type error be detected, it seralizes response data by `JSON.stringify()` function, and logs the error message to the console or somewhere you've specified. It is useful when you want to know the error message, but do not want to throw 500 internal server error to the client application.
 
 ```typescript
 TypedRoute.setValidateErrorLogger((err: TypedRoute.IValidateErrorLog) => {
