Update swagger.mdx -> `@ApiExtension()`

--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -772,6 +772,7 @@ Swagger generator fo `@nestia/sdk` supports some NestJS decorators. Here is the 
     - `@ApiOAuth2()`
     - `@ApiSecurity()`
     - `@ApiTags()`
+    - `@ApiExtension()`
   - `@nestia/core`
     - `@TypedException()`
     - `@SwaggerExample.Parameter()`
