Fix editor page download bug

--- a/website/pages/docs/editor.mdx
+++ b/website/pages/docs/editor.mdx
@@ -69,7 +69,7 @@ Install `@nestia/editor` and import one of below components.
 
 > [💾 https://nestia.io/downloads/editor.zip](/downloads/editor.zip)
 
-Just unzip the above [`editor.zip`]((/downloads/editor.zip)) file, and place your `swagger.json` file into the extracted directory.
+Just unzip the above [`editor.zip`](/downloads/editor.zip) file, and place your `swagger.json` file into the extracted directory.
 
 If you open the extracted `index.html` in your browser, you can see the `@nestia/editor` is serving the "TypeScript Swagger Editor" application with your `swagger.json` file.
 
