--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1,6 +1,5 @@
 import { Tabs, Tab } from 'nextra-theme-docs'
 
-import { EditorComposer } from "../../../src/functional/EditorComposer";
 import { EDITOR_EXAMPLES } from "../../../src/constants/EDITOR_EXAMPLES";
 
 ## Outline
@@ -1740,16 +1739,8 @@ The 1st is publishing the `swagger.json` file in a public repo, and showing it t
 {<ul>
   {EDITOR_EXAMPLES.map((example) => (
     <li>
-      <a style={{ cursor: "pointer" }} 
-         onMouseDown={(evt) => {
-          if (evt.which === 3) return;
-          EditorComposer.sdk({
-            title: example.title,
-            swagger: example.swagger,
-            e2e: true,
-            simulate: true,
-          }).catch(() => {});
-         }}>
+      <a href={`/editor/?url=${encodeURIComponent(example.swagger)}&simulate=true&e2e=true`} 
+          target="_blank">
         {example.title}
       </a>
     </li>
